cambio de prueba< _”hola mundo” a “hola mundo como estas”

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <div class="text-center">Hola Mundo</div>
+    <div class="text-center">Hola Mundo como estas!!</div>
 
 
     <script
