--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,24 @@
     <title>Mi primera Pagina de Node</title>
   </head>
   <body>
+  
+ <div class="pos-f-t">
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4">
+      <h4 class="text-white">Collapsed content</h4>
+      <span class="text-muted">Toggleable via the navbar brand.</span>
+    </div>
+  </div>
+  <nav class="navbar navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </nav>
+</div>
 
     <div class="text-center">Hola Mundo como estas!!</div>
 
+    
 
     <script
     			  src="https://code.jquery.com/jquery-3.2.1.js"
